--- a/app/components/hamburgerMenu.css
+++ b/app/components/hamburgerMenu.css
@@ -1,5 +1,6 @@
 .menu-container {
     position: relative;
+    
 }
 
 .menu {
@@ -7,7 +8,7 @@
     left: 50%;
     top: 3rem;
     transform: translate(-50%, 0);
-    background-color: #181818;
+    background-color: black;
     color: #F5F5F5;
     display: none;
 }
