--- a/app/globals.css
+++ b/app/globals.css
@@ -3,32 +3,18 @@
 @tailwind utilities;
 
 
-/* @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400;0,500;1,400&family=Press+Start+2P&family=Source+Code+Pro&display=swap'); */
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} */
 
 html,
 body {
   background-color: #f9fafb;
   /* Light gray */
   /* Black text */
-  font-family: inter-var, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  /* font-family: inter-var, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol"; */
   /* Add any other styles you want to apply globally */
 }
 
 .codeblock-chatgpt {
-  font-family: 'Söhne Mono', Monaco, Andale Mono, Ubuntu Mono, monospace;
+  /* font-family: 'Söhne Mono', Monaco, Andale Mono, Ubuntu Mono, monospace; */
   font-size: 0.875em;
   font-weight: 400;
   line-height: 1.7142857;
@@ -54,7 +40,7 @@ body {
 h1,
 h2,
 h3 {
-  font-family: 'OpenSans', sans-serif;
+  /* font-family: 'OpenSans', sans-serif; */
   font-weight: 400;
 }
 
