--- a/app/components/hamburgerMenu.css
+++ b/app/components/hamburgerMenu.css
@@ -11,6 +11,8 @@
     background-color: black;
     color: #F5F5F5;
     display: none;
+    border: 5px solid;
+    border-color: #f6dfdf;
 }
 
 .menu.open {
